# gcc-haskell

./: LICENSE  README.md  gcc-haskell.cabal  stack.yaml
src/: Lib.hs  Lib2.hs  LibData.hs  LibData2.hs  NTriplesParser.hs  Rdf.hs
