name:                gcc-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/h4ck3rm1k3/gcc-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              James Michael DuPont
maintainer:          jamesmikedupont@gmail.com
copyright:           GPLV3
category:            Experimental
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Lib2
  build-depends:       base >= 4.7 && < 5
                     , rdf4h
                     , hgal
                     , text
                     , containers
                     , network-uri
                     , network 
                     , parsec >= 3
                     , attoparsec >= 0.13.1.0
                     , parsers
  default-language:    Haskell2010

executable gcc-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gcc-haskell
  default-language:    Haskell2010

test-suite gcc-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gcc-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/h4ck3rm1k3/gcc-haskell
